Fix bug collection